src/style.css
@font-face {
  font-family: SF-Pro;
  src: url(/fonts/sf-pro-display/SFPRODISPLAYREGULAR.OTF);
}

:root {
  --orange: #ff9500; /*Operators */
  --dim-gray: #6c6b6a; /*Functions */
  --taupe-gray: #9a9898; /* Special Functions*/
  --davys-gray: #525150; /*Body */
  --gray: #7b7a79; /* Numbers, etc. */
  --white: #ededed; /* Text */

  /* Mobile Colors */
  --black: #000;
  --mobile-gray: #cccccc;
  --mobile-gray-2: #3a3a3a;
}

* {
  font-family: "SF-Pro", sans-serif;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  padding: 0;
  margin: 0;
  border: none;
  outline: none;
  color: var(--white);
  list-style: none;
  text-decoration: none;
}

/* Calculator Body Styles */

.wrapper {
  min-width: 400px;
  max-width: 580px;
  border-radius: 10px;
  width: 100%;
  min-height: 360px;
  background-color: var(--davys-gray);
  position: absolute;
  top: 20%;
  left: 20%;
  box-shadow: -1px 25px 44px 8px rgba(0, 0, 0, 0.41);
  -webkit-box-shadow: -1px 25px 44px 8px rgba(0, 0, 0, 0.41);
  -moz-box-shadow: -1px 25px 44px 8px rgba(0, 0, 0, 0.41);
  display: flex;
  flex-direction: column;
}

#header {
  width: 100%;
  height: 40px;
  position: relative;
  z-index: 10;
}

/* Displays Styles */

.display {
  width: 100%;
  height: 100px;
  border-radius: 10px 10px 0 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-end;
  padding: 0 6px;
}

.display .result {
  height: 50%;
  width: 100%;
  font-size: 20px;
  color: #aba9a9;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
}

.display .operations {
  height: 50%;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  font-size: 35px;
}

/* Buttons */

.buttons-container {
  width: 100%;
  height: 260px;
  border-radius: 0 0 10px 10px;
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: repeat(5, 1fr);
  grid-column-gap: 4px;
  grid-row-gap: 6px;
  padding: 6px;
}

.button:last-child {
  grid-area: 5 / 9 / 6 / 11;
}

.button {
  border-radius: 30px;
}

.button:hover {
  cursor: pointer;
}

.button.function,
.button.paren {
  background-color: var(--dim-gray);
}

.button.number,
.button.period {
  background-color: var(--gray);
}

.button.operator {
  background-color: var(--orange);
}

.button.special-function {
  background-color: var(--taupe-gray);
}

.button.secondFunctionActive {
  background-color: #eaeaeada;
}

@media screen and (max-width: 790px) {
  .wrapper {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

@media screen and (max-width: 620px) {
  .wrapper {
    box-shadow: none !important;
    border-radius: 0;
    max-width: none;
    width: 100%;
    height: 100vh;
    position: fixed !important;
    justify-content: space-between;
    background-color: var(--black);
  }

  .button:not(.mobile) {
    display: none;
  }

  .buttons-container {
    width: 100%;
    height: 80%;
    border-radius: 0;
    display: grid;
    grid-template-columns: repeat(4, 85px) !important;
    justify-content: center;
    align-items: center;
    gap: 10px;
    grid-column-gap: 10px;
    grid-row-gap: 6px;
    padding: 6px;
  }

  .button:last-child {
    grid-column: 3 / span 2;
    grid-row: 5;
    border-radius: 100px;
    height: 85px;
  }

  .button:not(.button:last-child) {
    width: 85px;
    height: 85px;
    border-radius: 50%;
    font-size: 1.2rem;
  }

  .button.number,
  .button.period {
    background-color: var(--mobile-gray-2);
  }

  .button.special-function {
    background-color: var(--mobile-gray);
    color: var(--black);
  }

  .display {
    width: 100%;
    height: 100px;
    border-radius: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-end;
    padding: 0 1rem;
    font-size: 1.5rem;
  }
}

@media screen and (max-width: 395px) {
  .button:last-child {
    height: 70px;
  }

  .button:not(.button:last-child) {
    width: 70px;
    height: 70px;
  }

  .buttons-container {
    width: 100%;
    height: 80%;
    grid-template-columns: repeat(4, 70px) !important;
    grid-column-gap: 10px;
    grid-row-gap: 6px;
  }

  .display {
    padding: 0 3rem;
    font-size: 2rem;
  }
}

